Update cms navigation issue where scrollbar was disabled

--- a/resources/css/local/management.less
+++ b/resources/css/local/management.less
@@ -4,6 +4,11 @@
 @import "bumpbox.less";
 @import "javascript.less";
 
+#page_container {
+	
+	margin-right: 1em;
+
+}
 
 
 /*THIS PAGE MIXINS*/
